--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
                 <option path = "models_for_test/Lol_Katarina_Default/Lol_Katarina_Default" type = "OBJMTL" scale = 2 selected="selected">lol</option>
                 <option path = "models_for_test/Gemini/Gemini" type = "OBJMTL" scale = 6 >Gemini</option>
             </select> -->
-            <p>Input the source url. (Images should be host on a domain allow cross-domain access)</p>
+            <p>Input the source url. (Images should be host on a domain allows cross-domain access)</p>
             <div id = "skin_update">
                 Skin URL: <input type="text" id="skin_path_textbox" value = "https://hydra-media.cursecdn.com/minecraft.gamepedia.com/5/54/Skintemplate.png">
+                <!--  -->
                 <button id = "button_skin_update">Update skin</button>
-            </div>            
+                </br><img id = "skin_preview" src = "">
+            </div>
         </div>
             <script src="./javascript/McCharacter.js"></script>
             <script src="./javascript/create_scene.js"></script>
